fixed text size, and vertical alignment

--- a/source/stylesheets/shared/_base.scss
+++ b/source/stylesheets/shared/_base.scss
@@ -166,10 +166,11 @@
   > a:not(.button) {
     @extend .portrait;
     @include background-size(cover);
-    cursor: default;
-    margin: 0 auto;
-    display: block;
     background-image: image-url("#{$image-url}");
+    cursor: default;
+    display: block;
+    margin: 0 auto;
+    overflow: hidden;
     position: relative;
     z-index: 10;
 
@@ -181,26 +182,25 @@
       color: $white;
       display: table;
       font-weight: 600;
-      opacity: 0;
-      overflow: hidden;
       margin: 0 auto;
-      position: absolute;
+      opacity: 0;
       padding: 0;
+      position: absolute;
       .text {
         @include transition-property(all);
         @include transition-duration(0.4s);
         display: table-cell;
-        position: relative;
-        top: -100%;
-        opacity: 0;
         height: 100%;
+        opacity: 0;
+        position: relative;
+        padding-bottom: 100%;
+        vertical-align: middle;
       }
       &:hover {
         opacity: 1;
         .text {
-          top: 0;
           opacity: 1;
-          vertical-align: middle;
+          padding-bottom: 0%;
         }
       }
     }
